include/TpcAccess.h


enum TPC_ErrorCode {
    tpc_noError = 0,
    tpc_errCalibrating = 1,
    tpc_errNoConnection = 2,
    tpc_errServerClientVersionConflict = 3,
    tpc_errDeviceInitializationFailure = 4,
    tpc_errHardwareFailure = 5,
    tpc_errTransmissionError = 6,
    tpc_errStartError = 7,
    tpc_errIncompatibleBoards = 8,
    tpc_errInvalidDeviceIx = 9,
    tpc_errInvalidBoardAddress = 10,
    tpc_errInvalidInputNumber = 11,
    tpc_errInvalidIndex = 12,
    tpc_errBufferTooShort = 13,
    tpc_errInvalidParameter = 14,
    tpc_errInvalidParameterValue = 15,
    tpc_errInvalidCommand = 16,
    tpc_errWrongSystemState = 17,
    tpc_errInvalidBlockNumber = 18,
    tpc_errNoData = 19,
    tpc_errNewMeasurement = 20,
    tpc_errLoadSettingFile = 21,
    tpc_errWriteSettingFile = 22,
    tpc_errNotImplemented = 23,
    tpc_errInternalError = 24,
    tpc_errAutoSequence = 25,
    tpc_noHardwarePresent = 26,
    tpc_errTimeout = 27,
    tpc_errMeasurementAborted = 28,
};
TPC_EXP enum TPC_ErrorCode TPC_CC TPC_GetInputRanges(int deviceIx, int boardAddress, int inputNumber, int inputType,
                                                     double* inputRanges, int nrOfRanges);
enum TPC_EasyTriggerMode {
    tpc_etrgOff = 0x8000,
    tpc_etrgSlope = 0,
    tpc_etrgWindow = 0x0100,
    tpc_etrgState = 0x0101,
    tpc_etrgSlewRate = 0x02,
    tpc_etrgLongPulse = 0x04,
    tpc_etrgShortPulse = 0x08,
    tpc_etrgLongPeriod = 0x0C,
    tpc_etrgShortPeriod = 0x10,
    tpc_etrgLongDelay = 0x28,
    tpc_etrgShortDelay = 0x2C,
    tpc_etrgEqualPulse = 0x20,
    tpc_etrgNotEqualPulse = 0x24,
    tpc_etrgEqualPeriod = 0x38,
    tpc_etrgNotEqualPeriod = 0x3C,
    tpc_etrgEqualDelay = 0x30,
    tpc_etrgNotEqualDelay = 0x34,
};
enum TPC_EasyTriggerComperatorMode {
    tpc_etrgCompPositive = 1,
    tpc_etrgCompNegative = 2,
    tpc_etrgCompBoth = 3,
};
enum TPC_EasyTriggerFlags {
    tpc_etrgNone = 0x00,
    tpc_etrgANDGroup1 = 0x01,
    tpc_etrgANDGroup2 = 0x02,
    tpc_etrgANDGroup3 = 0x04,
    tpc_etrgANDGroup4 = 0x08,
    tpc_etrgInputMultiplier = 0x10,
    tpc_etrgShowMultipliedSignal = 0x20,
    tpc_etrgSetMasterDisable = 0x40,
    tpc_etrgIgnoreLevelAndTime = 0x80,
};
typedef bool(TPC_CC* TPC_AttributeEnumeratorCallback)(void* userData, int boardAddress, int inputNumber,
                                                      const char* key, const char* value);
TPC_EXP enum TPC_ErrorCode TPC_CC TPC_SetTrigger(int deviceIx, int boardAddress, int inputNumber,
                                                 TPC_EasyTriggerMode mode, TPC_EasyTriggerComperatorMode compMode,
                                                 TPC_EasyTriggerFlags flags, double level, double hysteresis,
                                                 int time = 0, int time2 = 0);
TPC_EXP enum TPC_ErrorCode TPC_CC TPC_GetTrigger(int deviceIx, int boardAddress, int inputNumber,
                                                 TPC_EasyTriggerMode* mode, TPC_EasyTriggerComperatorMode* compMode,
                                                 TPC_EasyTriggerFlags* flags, double* level, double* hysteresis,
                                                 int* time, int* time2);
enum TPC_SystemCommand {
    tpc_cmdStart = 0,          
    tpc_cmdStop,               
    tpc_cmdDisarm,             
    tpc_cmdArm,                
    tpc_cmdTrigger,            
    tpc_cmdReserved1,          
    tpc_cmdArmExtCommands,     
    tpc_cmdDisarmExtCommands,  
    tpc_cmdStartGPSSynced,     
    tpc_cmdInitSync            
};
TPC_EXP enum TPC_ErrorCode TPC_CC TPC_ExecuteSystemCommand(enum TPC_SystemCommand command);
TPC_EXP enum TPC_ErrorCode TPC_CC TPC_ExecuteSystemCommandSystem(int id, enum TPC_SystemCommand command);
TPC_EXP enum TPC_ErrorCode TPC_CC TPC_MakeMeasurement(int timeout, int* measurementNumber);
struct TPC_DeviceStatus {
    enum TPC_ErrorCode deviceError;
    int measurementNumber;
    struct TPC_DateTime measurementStartTime;
    bool startInProgress;
    struct TPC_BoardStatus boards[tpc_maxBoards];
    int settingsChangesCounter;
    int clusterNrs[tpc_maxBoards];
    int operationModes[tpc_maxBoards];
    enum TPC_AUTOSEQ_STATUS autosequenceState;
    enum TPC_ExtStartState extStartState;
    struct TPC_GPSStatus gpsStatus;
    struct TPC_TempStatus tempStatus;
};
typedef void(TPC_CC* TPC_StatusCallbackFunc)(void* userData, int deviceIx, struct TPC_DeviceStatus* status);
TPC_EXP enum TPC_ErrorCode TPC_CC TPC_SetStatusCallbackSystem(int id, TPC_StatusCallbackFunc callback, void* userData);