src/TpcAccess/TpcAccessElsys.h


enum TPC_CalibrationType {
    tpc_calAuto = 0,
    tpc_calFast = 1,
    tpc_calFull = 2,
    tpc_calPhase = 3,
};
TPC_EXP TPC_ErrorCode TPC_CC TPC_Elsys_StartCalibration(int deviceIx, TPC_CalibrationType command);
TPC_EXP enum TPC_ErrorCode TPC_CC TPC_WriteDev(int deviceIx, int boardAddress, int type, unsigned count, void* data,
                                               unsigned aux1, unsigned aux2);
TPC_EXP enum TPC_ErrorCode TPC_CC TPC_ReadDev(int deviceIx, int boardAddress, int type, unsigned count, void* data,
                                              unsigned aux1, unsigned aux2);
TPC_EXP enum TPC_ErrorCode TPC_CC TPC_ReadWriteTwi(int deviceIx, int boardAddress, int amplifier, int count,
                                                   char* data);
TPC_EXP enum TPC_ErrorCode TPC_CC TPC_CancelSetSystem(int id);
TPC_EXP enum TPC_ErrorCode TPC_CC TPC_ProcessDeferredDataRequestsSystem(int id, int measurementNumber);
TPC_EXP enum TPC_ErrorCode TPC_CC TPC_CancelDeferredDataRequestsSystem(int id);
TPC_EXP enum TPC_ErrorCode TPC_CC TPC_LoadAutosequence(int deviceIx, char* cData, int iLength);
TPC_EXP enum TPC_ErrorCode TPC_CC TPC_GetAutoSequence(int deviceIx, char* cData, int iLength);
TPC_EXP enum TPC_ErrorCode TPC_CC TPC_StartAutoSequence(int deviceIx);
TPC_EXP enum TPC_ErrorCode TPC_CC TPC_StopAutoSequence(int deviceIx);
struct TPC_BitReadoutTestResult {
    int channelBitErrors[tpc_maxInputs];
    int size;
};
TPC_EXP enum TPC_ErrorCode TPC_CC TPC_GetBitReadoutErrors(int deviceIx, int boardAddress,
                                                          struct TPC_BitReadoutTestResult* result);
TPC_EXP enum TPC_ErrorCode TPC_CC TPC_WritePhaseParameters(int deviceIx, int boardAddress);