src/wrappers/Elsys.TpcAccess/NativeMethods.cs


        [DllImport(dllName)]
        public static extern ErrorCode TPC_CancelSetSystem(int id);

        [DllImport(dllName)]
        public static extern ErrorCode TPC_ExecuteSystemCommand(TPC_SystemCommand command);

        [DllImport(dllName)]
        public static extern ErrorCode TPC_ExecuteSystemCommandSystem(int id, TPC_SystemCommand command);

        [DllImport(dllName)]
        public static extern ErrorCode TPC_MakeMeasurement(int timeout, out int measurementNumber);

        [DllImport(dllName)]
        public static extern ErrorCode TPC_SetStatusCallbackSystem(int id, TPC_StatusCallbackFunc callback,
                                                                   IntPtr userData);

        [DllImport(dllName)]
        public static extern ErrorCode TPC_ProcessDeferredDataRequestsSystem(int id, int measurementNumber);

        [DllImport(dllName)]
        public static extern ErrorCode TPC_CancelDeferredDataRequestsSystem(int id);


        [DllImport(dllName)]
        public static extern ErrorCode TPC_Elsys_StartCalibration(int deviceIx, int command);

        [DllImport(dllName)]
        public static extern ErrorCode TPC_WriteDev(int deviceIx, int boardAddress, int type, uint count, IntPtr data, uint aux1, uint aux2);

        [DllImport(dllName)]
        public static extern ErrorCode TPC_ReadDev(int deviceIx, int boardAddress, int type, uint count, IntPtr data, uint aux1, uint aux2);

        [DllImport(dllName)]
        public static extern ErrorCode TPC_ReadWriteTwi(int deviceIx, int boardAddress, int amplifier, int count, IntPtr data);

        [DllImport(dllName)]
        public static extern ErrorCode TPC_LoadAutosequence(int deviceIx, StringBuilder buffer, int maxLen);

        [DllImport(dllName)]
        public static extern ErrorCode TPC_GetAutoSequence(int deviceIx, StringBuilder buffer, int maxLen);

        [DllImport(dllName)]
        public static extern ErrorCode TPC_StartAutoSequence(int deviceIx);

        [DllImport(dllName)]
        public static extern ErrorCode TPC_StopAutoSequence(int deviceIx);

        // Easy trigger & recording functions
        [DllImport(dllName)]
        public static extern ErrorCode TPC_SetTrigger(int deviceIx, int boardAddress, int inputNumber, TPC_EasyTriggerMode mode, TPC_EasyTriggerComparatorMode comp, TPC_EasyTriggerFlags flags, double level, double hysteresis, int time, int time2);

        // Easy trigger & recording functions
        [DllImport(dllName)]
        public static extern ErrorCode TPC_GetTrigger(int deviceIx, int boardAddress, int inputNumber, out TPC_EasyTriggerMode mode, out TPC_EasyTriggerComparatorMode compMode, out TPC_EasyTriggerFlags flags, out double level, out double hysteresis, out int time, out int time2);


        [DllImport(dllName)]
        public static extern ErrorCode TPC_GetInputRanges(int deviceIx, int boardAddress, int inputNumber, InputCoupling inputType, IntPtr inputRanges, int nrOfRanges);


        [DllImport(dllName)]
        public static extern ErrorCode TPC_GetBitReadoutErrors(int deviceIx, int boardAddress, out TPC_BitReadoutTestResult result);


        [DllImport(dllName)]
        public static extern ErrorCode TPC_WritePhaseParameters(int deviceIx, int boardAddress);
    }

    public delegate bool TPC_AttributeEnumeratorCallback(IntPtr userData, int boardAddress, int inputNumber, string key, string value);
    public delegate void TPC_StatusCallbackFunc(IntPtr userData, int deviceIx, IntPtr status);

}
